Scheduler: Fixed an layout issue where cells would expand greater than the set height.

--- a/scheduler/meta/print.css
+++ b/scheduler/meta/print.css
@@ -13,6 +13,10 @@ table span.text
 {
 	veritcal-align: center;
 }
+table span.text p
+{
+        margin: 0;
+}
 #blocks
 {
 	width: 5em;
